<resources>
    <string name="app_name">Shop.it</string>
    <string name="slogan">Great lifestyle at your fingertips</string>
    <string name="login">login</string>
    <string name="login_string">Login to have access to products offered</string>
    <string name="password_caption">Password</string>
    <string name="password_string">At least 8 symbols...</string>
    <string name="email_caption">E-mail</string>
    <string name="email_example">e.g. john@gmail.com</string>
    <string name="label_string">Login</string>
    <string name="label_ek1_string">
        <u>Forget Password?</u></string>
    <string name="email_label">email label</string>
    <string name="forgot_password_string">Having Trouble Logging In? Click Here</string>
    <string name="button">Button</string>
    <string name="action_1">Add To cart</string>
    <string name="action_2">Buy</string>
    <string name="content_description_media">Robot Image</string>
    <string name="title">Robot</string>
    <string name="secondary_text">120$</string>
    <string name="Register_Button">Register</string>
    <string name="password_input_label">Enter Password Here</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">home</string>
    <string name="my_orders">My Orders</string>
    <string name="Shoes">Shoes</string>
    <string name="phone">Phone</string>
    <string name="categories_heading">Categories</string>
    <string name="trending_product">Trending Product</string>
    <string name="robot">Robot</string>
</resources>