<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_screen"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="-16dp"
    tools:layout_editor_absoluteY="-123dp">

    <TextView
        android:id="@+id/login_info"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:layout_marginBottom="668dp"
        android:gravity="top"
        android:text="@string/login_string"
        android:textColor="#CBB7B6" />


    <ImageView
        android:id="@+id/email_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_info"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="-650dp"
        android:layout_marginBottom="620dp"
        android:background="@drawable/email_caption"
        android:contentDescription="Email label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_info"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-620dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="560dp"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_example" />


    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:layout_marginBottom="540dp"
        android:contentDescription="TODO"
        android:src="@drawable/password_caption" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:id="@+id/password"
        android:layout_below="@+id/email_caption"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-540dp"
        android:layout_marginBottom="480dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_input_label"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="-440dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="386dp"
        android:onClick="switchToHomepage"
        android:text="@string/login" />

    <Button
        android:id="@+id/register"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="-320dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="230dp"
        android:text="@string/Register_Button" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/register"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-200dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="272dp"
        android:text="@string/forgot_password_string"
        android:textColor="@color/white"
        android:textSize="15dp" />


</RelativeLayout>